fix update overflow -x

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,1 +1,5 @@
 @import 'element-plus/theme-chalk/index.css';
+
+body {
+    overflow-x: hidden;
+}
